2003-07-07  NAKAJIMA Mikio  <minakaji@namazu.org>

	* experimental/skk-study.el (skk-kakutei-initialize): Bug fixed.

2003-07-06  NAKAJIMA Mikio  <minakaji@namazu.org>

	* experimental/skk-hint.el (skk-hint-limit): Use `aref' instead of
	`skk-str-ref'.
	(skk-hint-member): Ditto.
	* experimental/skk-study.el (skk-study-check-alist-format-1):
	Ditto.
	(skk-kakutei-initialize): Do not add DATA to `skk-study-data-ring'
	when KAKUTEI-WORD is equal to car of `skk-henkan-list'.
	(skk-study-save): Bug fixed.
	(skk-study-sort-saving): Change its default value to nil.
	(skk-study-associates-number): Change its default value to 5.

	* experimental/rdbms/skk-rdbms.el (skk-rdbms-sahen-search-1):
	Ditto.
	* ptexinfmt.el: Sync up with the file in emacs-w3m 1.3.

	* Makefile (VERSION): Change 12.1.1rc1 to 12.2.0rc1.
	* skk-version.el (skk-version): Bump to 12.2.0 (Sone).

2003-07-05  NAKAJIMA Mikio  <minakaji@namazu.org>

	* Makefile (VERSION): Change 11.6.0 to 12.1.1rc1.
	* SKK-MK: Change required APEL version to 10.6.

2003-06-25  Masatake YAMATO  <jet@gyve.org>

	* experimental/context-skk.el (context-skk-in-programming-mode-p):
	(context-skk-out-of-string-or-comment-in-programming-mode-p): Fix
	a typo.
	(context-skk-in-mew-draft-attachments-region-p): New function.
	(context-skk-insert): Invoke (key-binding (this-command-keys))
	instead	of self-insert-command.
	(context-skk-context-check-hook):
	context-skk-in-mew-draft-attachments-region-p is added.

2003-06-21  NAKAJIMA Mikio  <minakaji@namazu.org>

	* experimental/context-skk.el: New file (see [skk 4558]).
	(context-skk-in-programming-mode-p): Use `memq' instead of
	`member'.

2003-06-20  NAKAJIMA Mikio  <minakaji@namazu.org>

	* skk.el (skk-make-temp-jisyo): Abolish.
	(skk-setup-shared-private-jisyo): Do not use `make-temp-name' (see
	[skk 4646]).

2003-03-28  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk.el (skk-toggle-characters): Function `skk-katakana-henkan'